// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'Browser' is not a valid key, did you mean undefined? 1`] = `
[TypeError: 
- package.json: "Browser" is not a valid key. Did you mean "browser"?]
`;

exports[`'Dependencies' is not a valid key, did you mean 'dependencies'? 1`] = `
[TypeError: 
- package.json: "Dependencies" is not a valid key. Did you mean "dependencies"?]
`;

exports[`'Exports' is not a valid key, did you mean 'exports'? 1`] = `
[TypeError: 
- package.json: "Exports" is not a valid key. Did you mean "exports"?]
`;

exports[`'Main' is not a valid key, did you mean undefined? 1`] = `
[TypeError: 
- package.json: "Main" is not a valid key. Did you mean "main"?]
`;

exports[`'Module' is not a valid key, did you mean undefined? 1`] = `
[TypeError: 
- package.json: "Module" is not a valid key. Did you mean "module"?]
`;

exports[`'Source' is not a valid key, did you mean undefined? 1`] = `
[TypeError: 
- package.json: "Source" is not a valid key. Did you mean "source"?]
`;

exports[`'Type' is not a valid key, did you mean 'type'? 1`] = `
[TypeError: 
- package.json: "Type" is not a valid key. Did you mean "type"?]
`;

exports[`'Types' is not a valid key, did you mean undefined? 1`] = `
[TypeError: 
- package.json: "Types" is not a valid key. Did you mean "types"?]
`;

exports[`'devdependencies' is not a valid key, did you mean 'devDependencies'? 1`] = `
[TypeError: 
- package.json: "devdependencies" is not a valid key. Did you mean "devDependencies"?]
`;

exports[`'peerdependencies' is not a valid key, did you mean 'peerDependencies'? 1`] = `
[TypeError: 
- package.json: "peerdependencies" is not a valid key. Did you mean "peerDependencies"?]
`;

exports[`'typesversions' is not a valid key, did you mean 'typesVersions'? 1`] = `
[TypeError: 
- package.json: "typesversions" is not a valid key. Did you mean "typesVersions"?]
`;

exports[`conditional imports must be prefixed with # 1`] = `
[ZodError: [
  {
    "code": "custom",
    "fatal": true,
    "path": [
      "imports",
      "env"
    ],
    "message": "Invalid input"
  }
]]
`;

exports[`conditional imports must be prefixed with # 2`] = `
{
  "exports": {
    "./package.json": "./package.json",
  },
  "imports": {
    "#env": {
      "browser": "./src/index.browser.ts",
      "default": "./src/index.ts",
    },
  },
  "license": "MIT",
  "name": "dummy-module",
  "type": "module",
  "version": "0.0.0",
}
`;
